# localRAGMCP

./: .gitignore  README.md  index.py  main.py  pyproject.toml  server.py
tools/: localPapers.py
